Versión pre-alfa

--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
     "require": {
         "chillerlan/php-qrcode": "^4.3",
         "josemmo/facturae-php": "^1.8",
-        "josemmo/verifactu-php": "^0.0.2"
+        "josemmo/verifactu-php": "^0.0.2",
+        "dompdf/dompdf": "^2.0"
     },
     "repositories": [
         {
